fix: project image width not fit when image is wide

--- a/src/components/StartupCard/StartupCard.module.scss
+++ b/src/components/StartupCard/StartupCard.module.scss
@@ -42,7 +42,7 @@
 
 
 .image {
-	@apply rounded-t-lg;
+	@apply rounded-t-lg w-full;
 	aspect-ratio: 16/9;
 	object-fit: cover;
 }
